--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 /exer01/build/
 /exe02/nbproject/private/
 /exe02/build/
+/Exe03/nbproject/private/
+/Exe03/build/
+/Exe04/nbproject/private/
+/Exe04/build/
+/Exe05/nbproject/private/
+/Exe05/build/
+/Exe06/nbproject/private/
+/Exe07/nbproject/private/
+/Exe08/nbproject/private/
+/Exe09/nbproject/private/
+/Exe10/nbproject/private/
+/Exe06/build/
